<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appx="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="prefs"
            type="sugar.free.sightremote.adapters.PrefsViewImpl" />

        <variable
            name="finger"
            type="sugar.free.sightremote.activities.security.FingerPrintViewHelper" />

        <variable
            name="slide"
            type="sugar.free.sightremote.adapters.SlidingWindowViewHelper" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/firewalllayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/which_pump_features_is_the_app_is_allowed_to_use" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="vertical">

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:checked="@{prefs.getbool(`firewall_allow_standard_bolus`)}"
                        android:onClick="@{() -> prefs.togglebool(`firewall_allow_standard_bolus`)}"
                        android:text="@{@string/allow_standard_boluses + @string/switch_spacer}"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:checked="@{prefs.getbool(`firewall_allow_extended_bolus`)}"
                        android:onClick="@{() -> prefs.togglebool(`firewall_allow_extended_bolus`)}"
                        android:text="@{@string/allow_extended_boluses + @string/switch_spacer}"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:checked="@{prefs.getbool(`firewall_allow_temporary_basal`)}"
                        android:onClick="@{() -> prefs.togglebool(`firewall_allow_temporary_basal`)}"
                        android:text="@{@string/allow_temporary_basals + @string/switch_spacer}"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorBackgroundLight" />

                    <Switch
                        android:id="@+id/switch4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:checked="@{prefs.getbool(`firewall_password_boluses`)}"
                        android:onClick="@{() -> prefs.togglebool(`firewall_password_boluses`)}"
                        android:text="@{@string/finger_print_or_password_format(finger.supportsFingerprint() ? @string/fingerprint_or : ``) + ` ` + @string/before_bolusing + @string/switch_spacer}"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/slidingWindowLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@{slide.description}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        appx:showIfTrue="@{safeUnbox(prefs[`firewall_password_boluses`])}">

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="3"
                            android:gravity="center_horizontal|center"
                            android:inputType="numberDecimal"
                            android:text="@={slide.units}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="U per" />

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:ems="3"
                            android:gravity="top|center_horizontal"
                            android:inputType="number"
                            android:text="@={slide.period}" />

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center_vertical"
                            android:layout_weight="1"
                            android:entries="@array/Periods"
                            android:onItemSelected="@{(parent, view, position, id) -> slide.onSelectedPeriodItem(parent, view, position, id)}"
                            android:selectedItemPosition="@{slide.selectedPeriodItem}"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    appx:showIfTrue="@{safeUnbox(prefs[`firewall_password_boluses`])}">

                    <TextView
                        android:id="@+id/firewallpasswordtitle"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="5dp"
                        android:text="@string/set_the_firewall_password"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:hint="@string/choose_a_password"
                            android:text="@string/password_is_used_if_fingerprint_indentification_is_not_available_or_fails"
                            android:textAlignment="viewEnd" />

                        <EditText
                            android:id="@+id/passwordText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:minWidth="100dp"
                            android:text="@={finger.password}" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/setpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:onClick="@{() -> finger.setStoredPassword()}"
                        android:text="@string/set_firewall_password" />

                    <Button
                        android:id="@+id/testbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:onClick="testPassword"
                        android:text="@string/test" />

                </LinearLayout>


            </LinearLayout>

        </android.support.constraint.ConstraintLayout>


    </ScrollView>


</layout>
